# codementor

./: .gitignore  README.md  codementor.py  pyproject.toml  script.py  test.py  test_codementor.py
codementor/: __init__.py  client.py  codementor.py  utils.py
codementorapi/: __init__.py  client.py  utils.py
codementorapi/models/: __init__.py  chat.py  freelance_jobs.py  jobs.py  reviews.py  sessions.py
example_payloads/: session_list_response.json
examples/data/: freelance_jobs.json  job_details.json  job_interest_response.json  job_list.json  reviews.json  send_message_response.json  session_details.json  sessions.json
scripts/: generate_sample_output.py
tests/: conftest.py  test_codementor.py
